--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     margin: 0 auto;
     height: 500px;
     margin-top: 35px;
+    padding: 5px;
     border: solid;
     border-color: #dddddd;
     border-width: 1px;
@@ -99,23 +100,42 @@ h1 {
     font-size: 20px;
 }
 
-/* For mobile phones: */
-[class*="col-"] {
-    width: 100%;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+@media screen and (max-width: 768px) {
+    body {
+        margin: 0 auto;
+        background: rgb(61, 48, 48);
+    }
+
+    .flex-container-main {
+        width: 768px;
+        height: 600px;
+    }
+
+    .flex-container-content {
+        width: 640px;
+        height: 430px;
+    }
+
+    #yourPw {
+        width: 560px;
+    }
+
+    #hr-one, #hr-two {
+        width: 560px;
+    }
+    
+    #button1 {
+        width: 500px;
+        margin-left: 75px;
+        color: white;
+
+    }
+    
+    #button2 {
+        width: 500px;
+        margin-left: 75px;
+        margin-top: 10px;
+        
+    }
+
   }
